--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Adding config.py file
+config.py
+
+# Adding additional files
+ratings.csv
+Movies_ETL.ipynb
+Movies-ETL.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
